# c_examples

./: CMakeLists.txt  README
src/: array_pointer.c  const.c  memory.c  replace_tabs.c
src/1_basic/: array_pointer.c  buffer.c  replace_tabs.c  split_chars.c  variable_sizes.c
src/2_low_level_io/: append_data.c  create_file.c  read_directory.c  read_file.c
